# datapill

./: .gitignore  LICENSE  README.md  bench_connectors.py  bench_s3.py  cli.md  dev-notes.md  docker-compose.test.yml  index.html  pyproject.toml  pytest.ini  test_dp_cli.sh  test_stream.py
.datapill/: store.db
.github/workflows/: publish.yml
artifacts/: bd71b26a_checkpoint_step_1.parquet  bd71b26a_checkpoint_step_2.parquet
scripts/: clear_pycache.sh  init_package.sh  seed.py
src/datapill/: __init__.py
src/datapill/artifacts/: 4e88638a_ingest_output.parquet  4e88638a_ingest_schema.json  932f4506_detail.json  932f4506_summary.json  f218f877_preprocess_config.json  f218f877_preprocess_output.parquet  registry.json
src/datapill/cli/: _shared.py  _tables.py  cmd_artifact.py  cmd_classify.py  cmd_connector.py  cmd_export.py  cmd_ingest.py  cmd_list.py  cmd_pipeline.py  cmd_preprocess.py  cmd_profile.py  cmd_run.py  main.py  shared.py
src/datapill/connectors/: base.py  kafka.py  local_directory.py  local_file.py  mysql.py  postgresql.py  registry.py  rest.py  rest_api.py  (+2 more)
tests/: conftest.py
tests/fixtures/: data.csv  data.ndjson  data.parquet  data.xlsx  data_1k.csv  kafka_config.json  mysql_config.json  mysql_write_config.json  pg_config.json  pg_write_config.json  preprocess_pipeline.json  rest_config.json  rest_pagination_config.json  run_config_pg.json  s3_config.json  s3_write_config.json  test.db
tests/test_cli/: conftest.py  test_export.py  test_kafka.py  test_local_file.py  test_mysql.py  test_postgresql.py  test_preprocess.py  test_profile.py  test_rest.py  test_run.py  test_s3.py
tests/test_connectors/: test_connectors.py  test_kafka.py  test_local_file.py  test_mysql.py  test_postgresql.py  test_rest.py  test_s3.py
tests/test_executor/: test_executor.py
tests/test_export/: test_pipeline.py  test_writers.py
tests/test_features/: test_artifact_store.py  test_ingest.py  test_profile.py
tests/test_preprocess/: test_missing.py  test_outlier.py  test_scaling.py
(+102 files in other folders)
