[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataprep-core"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "aiofiles>=23.0.0",
    "xlsxwriter>=3.0.0",
    "fastexcel>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dp = "dataprep.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/dataprep"]