[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataprep-core"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "asyncpg>=0.29.0",
    "asyncmy>=0.2.9",
    "aioboto3>=12.0.0",
    "aiokafka>=0.11.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.2.0",
    "fastexcel>=0.11.0",
    "fastavro>=1.9.0",
    "duckdb>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpserver>=1.0.0",
    "ruff>=0.4.0",
    "pyarrow>=16.0.0",
]

[project.scripts]
dp = "dataprep.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: mark test as requiring Docker services",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataprep"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]